# mensch-aergere-dich-nicht

./: .gitignore  Readme.md  mensch_aergere_dich_nicht.py  requirements.txt  setup.cfg
.github/workflows/: learn-github-action.yml  python-package.yml
mensch/: board.py  cli.py  field.py  game.py  main.py  piece.py
src/: board.py  field.py  fields.py  game.py  main.py  piece.py  test_board.py  test_game.py  test_main.py
tests/: test_board.py  test_game.py  test_main.py
