[metadata]
name = mensch_aergere_dich_nicht
version = 0.0.1
description = This is a command line interface for the German board game "Mensch ärgere dich nicht"

[options]
packages = mensch

[options.entry_points]
console_scripts =
    mensch-aergere-dich-nicht = mensch_aergere_dich_nicht.py

[tool:pytest]
pythonpath = mensch